Mise en place entité utilisateur + gestion de connection

--- a/templates/content/show.html.twig
+++ b/templates/content/show.html.twig
@@ -43,6 +43,8 @@
 
             </div>
             <div class="col">
+                {{ dump(ParticipateContent) }}
+
                 <h1>Resumé</h1>
                 <p>Score : 200 pts</p>
                 <p>Temps : 2h</p>
