--- a/templates/shared/header.html.twig
+++ b/templates/shared/header.html.twig
@@ -11,16 +11,21 @@
         <div class="collapse navbar-collapse" id="navbarColor03">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item ">
-                    <a class="nav-link" href="{{ path('home') }}">Acceuil <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="{{ path('home_index') }}">Acceuil <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item ">
                     <a class="nav-link" href="{{ path('contents_index') }}">Contenus <span class="sr-only">(current)</span></a>
                 </li>                                                 
             </ul>
 
-            <ul class="navbar-nav ml-auto">              
-                <li class="nav-item ">
-                    <a class="nav-link" href="#">Me connecter <span class="sr-only">(current)</span></a>
+            <ul class="navbar-nav ml-auto" style="padding-right: 30px;">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="true">Mon compte</a>
+                    <div class="dropdown-menu " x-placement="bottom-start" style="position: absolute; will-change: transform; top: 0px; left: -20px; transform: translate3d(0px, 40px, 0px);">
+                        <a class="dropdown-item" href="#">Mon profile</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="{{ path('security_logout') }}">Me déconnecter</a>
+                    </div>
                 </li>
             </ul>
         </div>
