Mise en place des rôles ainsi modifications graphiques et accès sécurisé au site

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -17,12 +17,21 @@
     margin-top: 20px;
 }
 
-.form-check-input {
+.form-check-input 
+{
     position: absolute!important;
     margin-top: 0.9rem;
     margin-left: 0rem;
 }
 
-.form-check-label {
+.form-check-label 
+{
     padding-left: 1rem!important;
+}
+
+.ad-title .btn 
+{
+    margin-top: 1em;
+    font-size: 1.5em;
+    line-height: 1.5em;
 }
