--- a/templates/content/index.html.twig
+++ b/templates/content/index.html.twig
@@ -25,7 +25,7 @@
                             <p class="card-text">
                                 {{ content.description }}
                             </p>
-                            <a href="{{ url }}" class="btn btn-info">En savoir plus</a>
+                            <a href="{{ url }}" class="btn btn-info float-right">En savoir plus</a>
                         </div>
                     </div>
                 </div> 
