--- a/templates/content/show.html.twig
+++ b/templates/content/show.html.twig
@@ -7,7 +7,7 @@
         <div class="container">
             <h1>{{ content.title }}</h1>
             <p>{{ content.description }}</p>
-            <a href="{{ path('contents_play', {'slug': content.slug }) }}" target="_blank">
+            <a href="{{ path('contents_play', {'slug': content.slug }) }}">
                 <button type="button" class="btn btn-success center-block">Lancer le jeux</button>
             </a>
         </div>
