--- a/templates/user/update_password.html.twig
+++ b/templates/user/update_password.html.twig
@@ -12,7 +12,7 @@
 
         {{ form_widget(form) }}
 
-        <button type="submit" class="btn btn-success">Mise a jour</button>
+        <button type="submit" class="btn btn-success"><i class="fas fa-check"></i> Confirmer la modification</button>
 
         {{ form_end(form) }}
     </div>
