--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,9 +2,11 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, user-scalable=no">
         <title>Urps-ml-paca - {% block title %}Welcome!{% endblock %}</title>
         <link rel="stylesheet" href="/css/bootstrap1.min.css">
         <link rel="stylesheet" href="/css/app.css">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 
         {% block stylesheets %}{% endblock %}
     </head>
@@ -39,7 +41,7 @@
                                 <p class="card-text">
                                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corrupti ex reiciendis vel voluptatem, quidem molestiae reprehenderit aspernatur ullam. Eveniet natus nobis necessitatibus officia sequi eligendi non, quos doloremque accusamus dolorem!Itaque aliquid exercitationem esse distinctio minima? Quisquam eos quas architecto. Sed veritatis enim illum exercitationem id laborum tenetur aspernatur rerum? Error perspiciatis veniam nemo voluptatum et unde, eligendi totam dolores?
                                 </p>
-                                <a href="#" class="btn btn-info">En savoir plus</a>
+                                <a href="#" class="btn btn-info float-right">En savoir plus</a>
                             </div>
                         </div>
                     </div>
@@ -57,7 +59,7 @@
                                 <p class="card-text">
                                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corrupti ex reiciendis vel voluptatem, quidem molestiae reprehenderit aspernatur ullam. Eveniet natus nobis necessitatibus officia sequi eligendi non, quos doloremque accusamus dolorem!Itaque aliquid exercitationem esse distinctio minima? Quisquam eos quas architecto. Sed veritatis enim illum exercitationem id laborum tenetur aspernatur rerum? Error perspiciatis veniam nemo voluptatum et unde, eligendi totam dolores?
                                 </p>
-                                <a href="#" class="btn btn-info">En savoir plus</a>
+                                <a href="#" class="btn btn-info float-right">En savoir plus1</a>
                             </div>
                         </div>
                     </div>
@@ -75,7 +77,7 @@
                                 <p class="card-text">
                                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corrupti ex reiciendis vel voluptatem, quidem molestiae reprehenderit aspernatur ullam. Eveniet natus nobis necessitatibus officia sequi eligendi non, quos doloremque accusamus dolorem!Itaque aliquid exercitationem esse distinctio minima? Quisquam eos quas architecto. Sed veritatis enim illum exercitationem id laborum tenetur aspernatur rerum? Error perspiciatis veniam nemo voluptatum et unde, eligendi totam dolores?
                                 </p>
-                                <a href="#" class="btn btn-info">En savoir plus</a>
+                                <a href="#" class="btn btn-info float-right">En savoir plus</a>
                             </div>
                         </div>
                     </div>
