--- a/templates/content/_collection.html.twig
+++ b/templates/content/_collection.html.twig
@@ -4,14 +4,14 @@
 {% endblock %}
 
 {% block _content_images_widget %}
-    <p>Ajouter des images</p>
+    <p>Ajouter des images du serious game</p>
 
     {{ form_widget(form) }}
     
     <input type="hidden" id="widgets_counter" val="0">
 
     <div class="form-group">
-        <button type="button" id="add-image" class="btn btn-primary">Ajouter une image</button>
+        <button type="button" id="add-image" class="btn btn-primary"><i class="fas fa-plus"></i> Ajouter une image</button>
     </div>
 {% endblock %}
 
