--- a/templates/security/registration.html.twig
+++ b/templates/security/registration.html.twig
@@ -6,20 +6,40 @@
 
 {% block body %}
     <div class="container">
-        <h1>Inscrivez vous sur notre site !</h1>
-
-        {{ form_start(form) }}
-
-        {{ form_widget(form) }}
-
-        <button type="submit" class="btn btn-success">Confirmer l'inscription</button>
-
-        {{ form_end(form) }}
-    </div>
+        <h1 class='my-5'>Inscrivez vous sur notre site !</h1>
+            {{ form_start(form) }}
+                <div class="row">
+                    <div class="col">
+                        <div class="alert alert-light">
+                            <h2 class="alert-heading">Informations générales</h2>
+                            <hr>
+                            {{ form_row(form.firstname) }}
+                            {{ form_row(form.lastname) }}
+                            {{ form_row(form.email) }}
+                        </div>
+                        <div class="alert alert-light">
+                            <h2 class="alert-heading">Securité</h2>
+                            <hr>
+                            {{ form_row(form.password) }}
+                            {{ form_row(form.passwordConfirm) }}
+                        </div>                   
+                    </div>
+                    <div class="col">
+                        <div class="alert alert-light">
+                            <h2 class="alert-heading">Questionnaire</h2>
+                            <hr>
+                            <p>À VENIR</p>
+                            <h4>Médecin traitant</h4>
+                        </div>            
+                    </div>
+                </div>
+                <button type="submit" class="btn btn-success"><i class="fas fa-check"></i> Confirmez l'inscription</button>         
+        {{ form_end(form) }}        
+    </div>            
 {% endblock %}
 
 {% block javascripts %}
     <script>
-        $('.navbar').remove();
+        
     </script>
 {% endblock %}
