--- a/templates/user/edit.html.twig
+++ b/templates/user/edit.html.twig
@@ -5,15 +5,29 @@
 {% block header %}{% endblock %}
 
 {% block body %}
-    <div class="container">
-        <h1>Modification des informations personnels</h1>
+    <div class="container ">
+        <h1 class='my-5'>Modification des informations personnels</h1>
 
         {{ form_start(form) }}
+            <div class="row">
+                <div class="col">
+                    <div class="alert alert-light">
+                        <h2 class="alert-heading">Informations générales</h2>
+                        <hr>
+                        {{ form_row(form.firstname) }}
+                        {{ form_row(form.lastname) }}
+                        {{ form_row(form.email) }}
+                    </div>   
+                    <button type="submit" class="btn btn-success"><i class="fas fa-check"></i> Mise a jour</button>         
+                </div>
+                <div class="col">
+                    <div class="alert alert-light">
+                        <h2 class="alert-heading">Questionnaire</h2>
+                        <hr>
 
-        {{ form_widget(form) }}
-
-        <button type="submit" class="btn btn-success">Mise a jour</button>
-
+                    </div>            
+                </div>
+            </div>
         {{ form_end(form) }}
     </div>
 {% endblock %}
