--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -8,14 +8,14 @@
         <h1>Profil de {{ user.fullname }}</h1>
         {% if user is same as(app.user) %}
             <div class="mt-3">
-                <a href="{{ path('user_edit') }}" class="btn btn-primary mr-2 mb-2">Modifier mes informations</a>
-                <a href="{{ path('update_password') }}" class="btn btn-primary mr-2 mb-2">Modifier mon mot de password</a>
+                <a href="{{ path('user_edit') }}" class="btn btn-primary mr-2 mb-2"><i class="far fa-edit fa-lg"></i> Modifier mes informations</a>
+                <a href="{{ path('update_password') }}" class="btn btn-primary mr-2 mb-2"><i class="far fa-edit fa-lg"></i> Modifier mon mot de password</a>
             </div>
         {% endif %}
         <hr>
         <h2>Serious game</h2>
         <div class="row">
-            {% if user.participateContents %}
+            {% if user.participateContents is not empty %}
                 {% for participateContent in user.participateContents %}
                     {% set content = participateContent.content %}
                     {% set url = path('contents_show', {'slug': content.slug }) %}
@@ -40,7 +40,7 @@
                     </div> 
                 {% endfor %}
             {% else %}
-                <div class="alert alert-warning">
+                <div class="alert alert-warning mt-3 mx-auto">
                     <h4 class="alert-heading">Vous n'avez particier a aucun serious game</h4>
                 </div>
             {% endif %}
