--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,6 +4,11 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, user-scalable=no">
         <title>Urps-ml-paca - {% block title %}Welcome!{% endblock %}</title>
+
+        <!--
+            <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">        
+        -->
+        
         <link rel="stylesheet" href="/css/bootstrap1.min.css">
         <link rel="stylesheet" href="/css/app.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
@@ -24,7 +29,7 @@
                     </p>
                 </div>
                 
-                <h1 class="mt-3 mb-3">Recommander pour vous</h2>
+                <h1 class="mt-3 mb-3">Recommandé pour vous</h2>
 
                 <div class="row">
                     <div class="col-md-4">
@@ -39,48 +44,13 @@
                             <div class="card-body">
                                 <h4 class="card-title">Lorem, ipsum dolor.</h4>
                                 <p class="card-text">
-                                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corrupti ex reiciendis vel voluptatem, quidem molestiae reprehenderit aspernatur ullam. Eveniet natus nobis necessitatibus officia sequi eligendi non, quos doloremque accusamus dolorem!Itaque aliquid exercitationem esse distinctio minima? Quisquam eos quas architecto. Sed veritatis enim illum exercitationem id laborum tenetur aspernatur rerum? Error perspiciatis veniam nemo voluptatum et unde, eligendi totam dolores?
+                                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corrupti ex reiciendis vel voluptatem, quidem molestiae 
                                 </p>
                                 <a href="#" class="btn btn-info float-right">En savoir plus</a>
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4">
-                        <div class="card bg-light mb-3">
-                            <div class="card-header text-center">
-                                <p>Gluciboat</p>
-                            </div>
-
-                            <img src="http://placehold.it/1000x400" alt="image jeux-1"
-                            style="height: 200px; width 100%; display: block;">
-
-                            <div class="card-body">
-                                <h4 class="card-title">Lorem, ipsum dolor.</h4>
-                                <p class="card-text">
-                                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corrupti ex reiciendis vel voluptatem, quidem molestiae reprehenderit aspernatur ullam. Eveniet natus nobis necessitatibus officia sequi eligendi non, quos doloremque accusamus dolorem!Itaque aliquid exercitationem esse distinctio minima? Quisquam eos quas architecto. Sed veritatis enim illum exercitationem id laborum tenetur aspernatur rerum? Error perspiciatis veniam nemo voluptatum et unde, eligendi totam dolores?
-                                </p>
-                                <a href="#" class="btn btn-info float-right">En savoir plus1</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="card bg-light mb-3">
-                            <div class="card-header text-center">
-                                <p>Gluciboat</p>
-                            </div>
-
-                            <img src="http://placehold.it/1000x400" alt="image jeux-1"
-                            style="height: 200px; width 100%; display: block;">
-
-                            <div class="card-body">
-                                <h4 class="card-title">Lorem, ipsum dolor.</h4>
-                                <p class="card-text">
-                                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corrupti ex reiciendis vel voluptatem, quidem molestiae reprehenderit aspernatur ullam. Eveniet natus nobis necessitatibus officia sequi eligendi non, quos doloremque accusamus dolorem!Itaque aliquid exercitationem esse distinctio minima? Quisquam eos quas architecto. Sed veritatis enim illum exercitationem id laborum tenetur aspernatur rerum? Error perspiciatis veniam nemo voluptatum et unde, eligendi totam dolores?
-                                </p>
-                                <a href="#" class="btn btn-info float-right">En savoir plus</a>
-                            </div>
-                        </div>
-                    </div>
+                    
                 </div>
                 
                 <h1 class="mt-3 mb-3">Lorem, ipsum dolor.</h2>
