--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -2,3 +2,61 @@
 
 {% block title %}page d'acceuil{% endblock %}
 
+{% block body %}
+    <div class="container mt-3">
+        <div class="jumbotron">
+            <h1 class="display-3">Lorem, ipsum dolor.</h1>
+            <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero quos nesciunt ullam ratione laboriosam eveniet odio aperiam alias voluptatem nisi obcaecati fugiat, sapiente a! Voluptatum illo veritatis dicta exercitationem aspernatur.</p>
+            <hr class="my-4">
+            <p class="lead">
+                <a class="btn btn-primary btn-lg" href="#" role="button">Lorem, ipsum.</a>
+            </p>
+        </div>
+    
+        <h1 class="mt-3 mb-3">Recommandé pour vous</h2>
+        <div class="row">
+            {% for content in user.recommendedContent %}
+                {% set url = path('contents_show', {'slug': content.slug }) %}
+                <div class="col-md-4">
+                    <div class="card bg-light mb-3">
+                        <div class="card-header text-center">
+                            <p>{{ content.title }}</p>
+                        </div>
+                        <a href="{{ url }}">
+                            <img src="{{ content.coverImage }}" alt="image jeux-1"
+                                style="height: 200px; width: 100%; display: block;">
+                        </a>
+                        <div class="card-body">
+                            <h4 class="card-title">{{ content.title }}</h4>
+                            <p class="card-text">
+                                {{ content.description }}
+                            </p>
+                            <a href="{{ url }}" class="btn btn-info float-right">En savoir plus</a>
+                        </div>
+                    </div>
+                </div> 
+            {% endfor %}
+        </div>
+
+        <h1 class="mt-3 mb-3">Les derniers serious game</h2>
+        
+        <div class="row">
+            {% for content in user.recommendedContent %}
+                {% set url = path('contents_show', {'slug': content.slug }) %}
+                <div class="col">
+                    <div class="card border-secondary mb-3">
+                        <div class="card-body">
+                            <h4 class="card-title">{{ content.title }}</h4>
+                            <hr>
+                            <div class="card-text">
+                                <img src="{{ content.coverImage }}" alt="image jeux 1" class="float-left mr-3" style="height: 200px; width: 100%; display: block;">
+                                <p class="float-left mr-3">{{ content.description }}</p>
+                                <a href="{{ url }}" class="btn btn-success float-right">En savoir plus</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            {% endfor %}
+        </div>     
+    </div>
+{% endblock %}
