mise a jour des rôles et mise en place admin pour patients

--- a/templates/admin/user/edit.html.twig
+++ b/templates/admin/user/edit.html.twig
@@ -1,8 +1,8 @@
-{% extends 'base.html.twig' %}
+{% extends 'admin/base.html.twig' %}
 
-{% block title %}Modification des informations personnels{% endblock %}
+{% block title %}Edition d'un serious game{% endblock %}
 
-{% block header %}{% endblock %}
+{% form_theme form 'admin/content/_collection.html.twig' %}
 
 {% block main %}
     <div class="container ">
