--- a/templates/security/reset_password.html.twig
+++ b/templates/security/reset_password.html.twig
@@ -2,13 +2,13 @@
  
 {% block title %}Reset Password !{% endblock %}
  
-{% block body %}
+{% block main %}
     <div class="container">
         <h1 class="my-5">Réinitialisé le mot de passe</h1>
         <div class="row">
             <div class="col">
                 <form method="post">
-                    <label for="inputPassword" class="sr-only">Mot de passe</label>
+                    <label for="inputPassword">Nouveau mot de passe</label>
                     <input type="password" name="password" id="inputPassword" class="form-control" placeholder="Password" minlength="6" required>
                     <input type="hidden" name="token" value="{{ token }}">
                     <br>
