--- a/public/css/app.css
+++ b/public/css/app.css
@@ -35,3 +35,13 @@
     font-size: 1.5em;
     line-height: 1.5em;
 }
+
+.popup
+{
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    top: 80px;
+}
