--- a/public/css/sb-admin-2.css
+++ b/public/css/sb-admin-2.css
@@ -558,6 +558,7 @@ pre code {
 
 .container {
   width: 100%;
+  height: 100%;
   padding-right: 0.75rem;
   padding-left: 0.75rem;
   margin-right: auto;
@@ -12015,3 +12016,12 @@ body.sidebar-toggled footer.sticky-footer {
   width: 100%;
 }
 
+.popup
+{
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    top: 80px;
+}
