--- a/templates/admin/content/index.html.twig
+++ b/templates/admin/content/index.html.twig
@@ -2,15 +2,11 @@
 
 {% block title %}Administration serious game{% endblock %}
 
-{% block stylesheets %}
-    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs4/dt-1.10.18/b-1.5.6/b-colvis-1.5.6/b-flash-1.5.6/b-html5-1.5.6/r-2.2.2/datatables.min.css"/>
-{% endblock %}
-
 {% block main %}
     <div class="container-fluid">
         <h1 class="my-5">Gestion des serious game</h1>
 
-        <table id="myTable" class="table table-hover">
+        <table id="contentsTable" class="table table-hover">
             <thead>
                 <tr>
                     <th>Id</th>
@@ -64,26 +60,17 @@
 {% endblock %}
 
 {% block javascripts %}
-
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.36/pdfmake.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.36/vfs_fonts.js"></script>
-    <script type="text/javascript" src="https://cdn.datatables.net/v/bs4/dt-1.10.18/b-1.5.6/b-colvis-1.5.6/b-flash-1.5.6/b-html5-1.5.6/r-2.2.2/datatables.min.js"></script>
+    {{parent()}}
     <script>
         $(document).ready( function () {
-            $('#myTable').DataTable({
+            $('#contentsTable').DataTable({
         dom: 'Bfrtip',
         buttons: [
             'excelHtml5',
             'csvHtml5',
             'pdfHtml5'
-        ]
-    }
-                
-            );
+                ]
+            });
         } );
     </script>
-
-
-
 {% endblock %}
