--- a/templates/security/forgotten_password.html.twig
+++ b/templates/security/forgotten_password.html.twig
@@ -7,13 +7,14 @@
 
 {% block main %}
     <div class="container">
-        <h1 class="my-5">Réinitialisé le mot de passe</h1>
+        <h1 class="my-5">Mot de passe oublié</h1>
+        
         <div class="row">
             <div class="col">
                 <form method="post">
             
-                    <label for="inputEmail" class="sr-only">Adresse email</label>
-                    <input type="email" name="email" id="inputEmail" class="form-control" placeholder="Email" required autofocus>
+                    <label for="inputEmail" >Adresse email</label>
+                    <input type="email" name="email" id="inputEmail" class="form-control" placeholder="Adresse email du compte" required autofocus>
                     <br>
                     <button class="btn btn-lg btn-primary" type="submit">Envoyer</button>
             
