--- a/templates/shared/header.html.twig
+++ b/templates/shared/header.html.twig
@@ -62,7 +62,7 @@
 
 
 {% for label, messages in app.flashes %}
-    <div class="container">
+    <div class="container popup">
         <div class="alert alert-dismissible alert-{{ label }}">
             <button type="button" class="close" data-dismiss="alert">&times;</button>
             {% for message in messages %}
