Crud administration fini

--- a/templates/admin/base.html.twig
+++ b/templates/admin/base.html.twig
@@ -37,7 +37,7 @@
 
       <!-- Nav Item - Charts -->
       <li class="nav-item">
-        <a class="nav-link" href="charts.html">
+        <a class="nav-link" href="{{ path('admin_tutors_index') }}">
           <i class="fas fa-fw fa-user-md"></i>
           <span>Tuteurs</span></a>
       </li>
