--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -10,9 +10,16 @@
             <div class="card mt-3">
                 <div class="card-body">
                     <div class="row justify-content-md-center align-items-center">
-                        <div class="col-auto text-align">
-                            <a href="{{ path('user_edit') }}" class="btn btn-primary mr-2 mb-2"><i class="far fa-edit fa-lg"></i> Modifier mes informations</a>
-                        </div>
+                        {% if is_granted('ROLE_TUTOR') %}
+                            <div class="col-auto text-align">
+                                <a href="{{ path('tutor_edit') }}" class="btn btn-primary mr-2 mb-2"><i class="far fa-edit fa-lg"></i> Modifier mes informations</a>
+                            </div>
+                        {% else %}
+                            <div class="col-auto text-align">
+                                <a href="{{ path('user_edit') }}" class="btn btn-primary mr-2 mb-2"><i class="far fa-edit fa-lg"></i> Modifier mes informations</a>
+                            </div>                        
+                        {% endif %}
+
                         <div class="col-auto text-align">
                             <a href="{{ path('update_password') }}" class="btn btn-primary mr-2 mb-2"><i class="far fa-edit fa-lg"></i> Modifier mon mot de password</a>
                         </div>
@@ -32,7 +39,12 @@
                             {% set url = path('contents_play', {'slug': content.slug }) %}
                             <div class="col-md-4">
                                 <div class="card bg-light mb-3">
-                                    <a href="{{ url }}">
+                                    {% if participateContent.completedAt is not null %}
+                                        <div id="ribbon-container">
+                                            <p id="ribbon-{{ content.slug }}">Terminé le {{ participateContent.completedAt | date("d/m/Y  H:i", "Europe/Paris") }}</p>
+                                        </div>
+                                    {% endif %}                                
+                                    <a href="{{ url }}">                                    
                                         <img src="{{ content.coverImage }}" alt="image jeux-1"
                                             style="height: 200px; width: 100%; display: block;">
                                     </a>
